# my_django_project

./: pyproject.toml
raven/: Makefile  db.sqlite3
raven/raven/: asgi.py  settings.py  urls.py  wsgi.py
raven/ufo/: admin.py  models.py  urls.py  views.py
raven/ufo/migrations/: 0001_initial.py  0002_event.py  0003_event_date.py  0004_event_area.py  0005_auto_20200903_0912.py  0006_auto_20201017_1403.py
raven/ufo/static/css/: style.css
raven/ufo/templates/ufo/: all_events.html  all_locations.html  index.html  search_date.html  search_location.html
