[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "my project"
authors = ["Pedro Silva <pedrosilvavpsn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
